Fix misalignment of Players header on Team->Players

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1325,7 +1325,7 @@ footer p {
 	padding-right: 10px;
 }
 #team #players table th.name {
-	padding-left: 16px;
+	padding-left: 10px;
 }
 #team #players table .position {
 	text-align: center;
